--- a/sass/ieLT9.scss
+++ b/sass/ieLT9.scss
@@ -7,6 +7,7 @@ $less-grid-element: unquote(".container");
 @import "compass/utilities/general/clearfix";
 @import "compass/css3/border-radius";
 @import "compass/css3/images";
+@import "compass/css3/box-shadow";
 
 @import "less/reset";
 @import "less/framework";
