--- a/sass/partials/_default.scss
+++ b/sass/partials/_default.scss
@@ -24,6 +24,15 @@
   .noAside .content{
     @include column(10, true);
   }
+  #logo{  
+      @include column(4);
+      margin-right: 116px;
+      float: left;
+    }
+  .slogan{
+    @include column(5, true);
+    float:left;
+  }
   .pitch{
     @include clearfix();
     .youtube{
